--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
       animation: shimmer 6s linear infinite, glow 3s ease-in-out infinite alternate;
       letter-spacing: 0.3px;
     }
-
+    
     .hero p {
       margin: 15px 0;
       font-size: 1.4rem;
@@ -525,7 +525,8 @@
       /* Initially hide and move the content down and to the side */
       opacity: 0;
       transform: translateY(20px) translateX(-20px);
-      transition: opacity 1s ease-out, transform 1s ease-out; /* Smoothly transition both properties */
+      transition: opacity 1s ease-out, transform 1s ease-out;
+      /* Smoothly transition both properties */
     }
 
     #content.show {
@@ -584,26 +585,6 @@
     .contact-form textarea {
       min-height: 120px;
       resize: none;
-    }
-
-    .contact-form input:focus,
-    .contact-form textarea:focus {
-      background: rgba(255, 255, 255, 0.1);
-      box-shadow: 0 0 12px #00f5d4;
-      border-color: #00f5d4;
-    }
-
-    .contact-form label {
-      position: absolute;
-      top: 50%;
-      left: 12px;
-      transform: translateY(-50%);
-      color: #bbb;
-      font-size: 0.95rem;
-      pointer-events: none;
-      transition: 0.3s ease;
-      background: transparent;
-      padding: 0 5px;
     }
 
     .contact-form input:focus+label,
@@ -762,6 +743,19 @@
         text-shadow: 0 4px 15px rgba(0, 0, 0, 0.6);
       }
     }
+
+    /* Typing effect styling */
+    #typed-text {
+      border-right: 2px solid;
+      animation: blink-caret 0.75s step-end infinite;
+      white-space: nowrap;
+      overflow: hidden;
+    }
+
+    @keyframes blink-caret {
+      from, to { border-color: transparent; }
+      50% { border-color: #ffcc70; }
+    }
   </style>
 </head>
 
@@ -798,7 +792,7 @@
 
     <section class="hero">
       <h2>Hello, I'm Anmol Srivastava!</h2>
-      <p>Curious developer passionate about building projects and learning new technologies!</p>
+      <p><span id="typed-text"></span></p>
       <button onclick="document.getElementById('contact').scrollIntoView({behavior:'smooth'})">Contact Me</button>
     </section>
 
@@ -970,34 +964,7 @@
     const enterBtn = document.getElementById("enter-btn");
     const bgMusic = document.getElementById("bg-music");
     const mainContent = document.getElementById("content");
-    const typedTextElement = document.getElementById("typed-text");
-const textToType = "Curious developer passionate about building projects and learning new technologies!";
-let charIndex = 0;
-const typingSpeed = 70; // Adjust typing speed (milliseconds per character)
-const erasingSpeed = 40; // Adjust erasing speed
-const newTextDelay = 1500; // Delay before starting to type again (if looping)
 
-function typeText() {
-  if (charIndex < textToType.length) {
-    typedTextElement.textContent += textToType.charAt(charIndex);
-    charIndex++;
-    setTimeout(typeText, typingSpeed);
-  } else {
-    // Optionally, if you want it to erase and re-type, uncomment the lines below
-    // setTimeout(eraseText, newTextDelay);
-  }
-}
-
-// Optional: function to erase text, if you want a looping effect
-function eraseText() {
-  if (charIndex > 0) {
-    typedTextElement.textContent = textToType.substring(0, charIndex - 1);
-    charIndex--;
-    setTimeout(eraseText, erasingSpeed);
-  } else {
-    setTimeout(typeText, newTextDelay);
-  }
-}
     // Add event listener to the "Enter Website" button
     enterBtn.addEventListener("click", () => {
       // Hide the intro overlay
@@ -1030,40 +997,6 @@ function eraseText() {
       });
     };
     window.addEventListener("scroll", showSection);
-    showSection(); // Call once on page load to check initial positions
-
-    // Particles.js config
-    particlesJS("particles-js", {
-      particles: {
-        number: {
-          value: 100
-        },
-        color: {
-          value: "#ffffff"
-        },
-        shape: {
-          type: "circle"
-        },
-        opacity: {
-          value: 0.5
-        },
-        size: {
-          value: 3
-        },
-        line_linked: {
-          enable: true,
-          distance: 150,
-          color: "#ffffff",
-          opacity: 0.4,
-          width: 1
-        },
-        move: {
-          enable: true,
-          speed: 3
-        }
-      }
-    });
-
 
     // Certificates viewer
     function showCertificate(certId) {
@@ -1109,6 +1042,74 @@ function eraseText() {
       const sidebar = document.getElementById("mySidebar");
       sidebar.style.width = (sidebar.style.width === "250px") ? "0" : "250px";
     }
+
+    // All functions that should run when the page is fully loaded
+    document.addEventListener("DOMContentLoaded", () => {
+      // Typing effect logic
+      const typedTextElement = document.getElementById("typed-text");
+      const textToType = "Curious developer passionate about building projects and learning new technologies!";
+      let charIndex = 0;
+      const typingSpeed = 70;
+      const erasingSpeed = 40;
+      const newTextDelay = 1500;
+
+      function typeText() {
+        if (charIndex < textToType.length) {
+          typedTextElement.textContent += textToType.charAt(charIndex);
+          charIndex++;
+          setTimeout(typeText, typingSpeed);
+        } else {
+          // You can uncomment this if you want it to erase and re-type
+          // setTimeout(eraseText, newTextDelay);
+        }
+      }
+
+      function eraseText() {
+        if (charIndex > 0) {
+          typedTextElement.textContent = textToType.substring(0, charIndex - 1);
+          charIndex--;
+          setTimeout(eraseText, erasingSpeed);
+        } else {
+          setTimeout(typeText, newTextDelay);
+        }
+      }
+
+      // Start the typing effect
+      typeText();
+
+      // Start the particle effect
+      particlesJS("particles-js", {
+        particles: {
+          number: {
+            value: 100
+          },
+          color: {
+            value: "#ffffff"
+          },
+          shape: {
+            type: "circle"
+          },
+          opacity: {
+            value: 0.5
+          },
+          size: {
+            value: 3
+          },
+          line_linked: {
+            enable: true,
+            distance: 150,
+            color: "#ffffff",
+            opacity: 0.4,
+            width: 1
+          },
+          move: {
+            enable: true,
+            speed: 3
+          }
+        }
+      });
+      showSection(); // Call once to check initial positions
+    });
   </script>
 </body>
 </html>
