--- a/index.html
+++ b/index.html
@@ -416,6 +416,14 @@ footer { background: rgba(0, 0, 0, 0.7); padding: 20px; text-align: center; marg
                         <p>A website where you can spin the roulette and try to win in the least number of chances</p>
                         <a href="https://spinroulette.netlify.app" target="_blank">View Project</a>
                     </div>
+                    <div class="project">
+                    <img src="photos/s3.png" alt="Project 4">
+                    <div class="project-content">
+                        <h3>Portfolio For Anmol Srivastava</h3>
+                        <p>This is my personal portfolio website showcasing my skills, projects, and achievements.</p>
+                        <a href="https://portfolio-anmolsri0610.vercel.app/" target="_blank">View Project</a>
+                    </div>
+                </div>
                 </div>
             </div>
         </section>
