--- a/index.html
+++ b/index.html
@@ -378,12 +378,14 @@ footer { background: rgba(0, 0, 0, 0.7); padding: 20px; text-align: center; marg
             <p style="text-align:center; margin-bottom:20px;">Click on a skill to view the certificate</p>
             <div class="skills">
                 <div class="skill" onclick="showCertificate('js-cert')">JavaScript</div>
+                <div class="skill" onclick="showCertificate('js-cert')">GenAI</div>
                 <div class="skill" onclick="showCertificate('java-cert')">Java</div>
                 <div class="skill" onclick="showCertificate('sql-cert')">SQL</div>
                 <div class="skill" onclick="showCertificate('python-cert')">Python</div>
             </div>
             <div class="certificate-viewer">
                 <img id="js-cert" src="photos/jscert.png" alt="JavaScript Certificate">
+                <img id="genai-cert" src="photos/genai.png" alt="Intro to GenAI Certificate">
                 <img id="java-cert" src="photos/javacert.png" alt="Java Certificate">
                 <img id="sql-cert" src="photos/sqlcert.png" alt="SQL Certificate">
                 <img id="python-cert" src="photos/pythoncert.png" alt="Python Certificate">
