--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@ footer { background: rgba(0, 0, 0, 0.7); padding: 20px; text-align: center; marg
             <p style="text-align:center; margin-bottom:20px;">Click on a skill to view the certificate</p>
             <div class="skills">
                 <div class="skill" onclick="showCertificate('js-cert')">JavaScript</div>
-                <div class="skill" onclick="showCertificate('js-cert')">GenAI</div>
+                <div class="skill" onclick="showCertificate('genai-cert')">GenAI</div>
                 <div class="skill" onclick="showCertificate('java-cert')">Java</div>
                 <div class="skill" onclick="showCertificate('sql-cert')">SQL</div>
                 <div class="skill" onclick="showCertificate('python-cert')">Python</div>
