--- a/index.html
+++ b/index.html
@@ -387,6 +387,7 @@ footer { background: rgba(0, 0, 0, 0.7); padding: 20px; text-align: center; marg
                 <img id="js-cert" src="photos/jscert.png" alt="JavaScript Certificate">
                 <img id="genai-cert" src="photos/genai.png" alt="Intro to GenAI Certificate">
                 <img id="java-cert" src="photos/javacert.png" alt="Java Certificate">
+                <img id="java-cert" src="photos/jvcert.png" alt="Java Certificate">
                 <img id="sql-cert" src="photos/sqlcert.png" alt="SQL Certificate">
                 <img id="python-cert" src="photos/pythoncert.png" alt="Python Certificate">
             </div>
