--- a/index.html
+++ b/index.html
@@ -134,14 +134,13 @@ h2 { margin-bottom: 20px; text-align: center; font-size: 2.3rem; font-weight: 70
 .skill { background: rgba(0, 229, 255, 0.1); border: 1px solid var(--cyan-accent); color: var(--text-light); padding: 10px 20px; margin: 5px; border-radius: 8px; transition: background 0.3s ease, transform 0.2s ease, border-color 0.3s; display: inline-block; cursor: pointer; font-weight: 500; }
 .skill:hover { background: rgba(0, 229, 255, 0.2); transform: scale(1.05); border-color: var(--cyan-glow); }
 
-/* --- CERTIFICATE SECTION: EDITED STYLES --- */
 .certificate-viewer {
     margin-top: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
-    min-height: 480px; /* Give the container a minimum height */
+    /* The "min-height" property was removed from here to eliminate the gap */
 }
 
 /* This rule now hides ALL direct children (img and div) */
@@ -161,7 +160,7 @@ h2 { margin-bottom: 20px; text-align: center; font-size: 2.3rem; font-weight: 70
     position: relative;
 }
 
-/* === NEW RULE: For the Java container when it's active === */
+/* NEW RULE: For the Java container when it's active */
 .certificate-viewer #java-cert.active {
     display: flex;
     justify-content: center;
@@ -170,7 +169,7 @@ h2 { margin-bottom: 20px; text-align: center; font-size: 2.3rem; font-weight: 70
     flex-wrap: wrap; /* Allows wrapping on smaller screens */
 }
 
-/* === EDITED RULE: Standardize size for single certificates === */
+/* EDITED RULE: Standardize size for single certificates */
 /* Using direct child selector ">" so it doesn't affect images inside the java div */
 .certificate-viewer > img {
     height: 450px; /* Fixed height for consistency */
@@ -181,7 +180,7 @@ h2 { margin-bottom: 20px; text-align: center; font-size: 2.3rem; font-weight: 70
     box-shadow: 0 8px 25px rgba(0, 0, 0, 0.4);
 }
 
-/* === NEW RULE: Style the two Java certificate images inside their container === */
+/* NEW RULE: Style the two Java certificate images inside their container */
 .certificate-viewer #java-cert img {
     height: 400px; /* Slightly smaller to fit side-by-side */
     width: auto;
