--- a/index.html
+++ b/index.html
@@ -128,6 +128,33 @@ nav a:hover::after { width: 100%; }
 .hero p { margin: 15px 0; font-size: 1.4rem; font-weight: 300; color: var(--text-light); }
 .hero button { padding: 12px 25px; background: var(--cyan-accent); color: var(--bg-dark); border: none; border-radius: 30px; font-size: 1rem; cursor: pointer; transition: 0.3s; font-weight: 600; }
 .hero button:hover { transform: scale(1.1); background: var(--cyan-glow); }
+        .hero button:hover { transform: scale(1.1); background: var(--cyan-glow); }
+
+/* ===== NEW RESUME STYLES ===== */
+#resume {
+    text-align: center;
+}
+
+.resume-btn {
+    display: inline-block;
+    padding: 12px 25px;
+    background: var(--cyan-accent);
+    color: var(--bg-dark);
+    border: none;
+    border-radius: 30px;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: 0.3s;
+    font-weight: 600;
+    text-decoration: none; /* Removes underline from the <a> tag */
+}
+.resume-btn:hover {
+    transform: scale(1.1);
+    background: var(--cyan-glow);
+}
+/* ===== END OF RESUME STYLES ===== */
+
+section { padding: 80px 20px; max-width: 1200px; margin: auto; }
 section { padding: 80px 20px; max-width: 1200px; margin: auto; }
 h2 { margin-bottom: 20px; text-align: center; font-size: 2.3rem; font-weight: 700; color: var(--cyan-glow); text-shadow: 0 0 10px rgba(0, 229, 255, 0.4); }
 .skills { display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin-top: 20px; }
@@ -339,6 +366,7 @@ footer { background: rgba(0, 0, 0, 0.7); padding: 20px; text-align: center; marg
                 <a href="#education">Education</a>
                 <a href="#skills">Skills</a>
                 <a href="#projects">Projects</a>
+                <a href="#resume">Resume</a>
                 <a href="#contact">Contact</a>
             </nav>
             <span class="hamburger" onclick="toggleSidebar()">☰</span>
@@ -349,6 +377,7 @@ footer { background: rgba(0, 0, 0, 0.7); padding: 20px; text-align: center; marg
             <a href="#education">Education</a>
             <a href="#skills">Skills</a>
             <a href="#projects">Projects</a>
+            <a href="#resume">Resume</a>
             <a href="#contact">Contact</a>
         </div>
 
@@ -493,6 +522,21 @@ footer { background: rgba(0, 0, 0, 0.7); padding: 20px; text-align: center; marg
                 </div>
             </div>
         </section>
+
+
+        </section>
+
+               <section id="resume">
+            <h2>My Resume</h2>
+            <p style="text-align:center; margin-bottom: 25px;">
+                Click the button below to view or download my resume.
+            </p>
+            <div style="text-align:center;">
+                <a href="photos/Anmol_Srivastava_Resume_BW.pptx" target="_blank" class="resume-btn">
+                    View My Resume
+                </a>
+            </div>
+        </section>
 
         <section id="contact">
             <h2>Contact Me</h2>
