--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@ footer { background: rgba(0, 0, 0, 0.7); padding: 20px; text-align: center; marg
                 Click the button below to view or download my resume.
             </p>
             <div style="text-align:center;">
-                <a href="photos/Anmol_Srivastava_Resume_BW.pptx" target="_blank" class="resume-btn">
+                <a href="photos/Anmol_Srivastava_Resume_BW.docx" target="_blank" class="resume-btn">
                     View My Resume
                 </a>
             </div>
