--- a/index.html
+++ b/index.html
@@ -526,17 +526,23 @@ footer { background: rgba(0, 0, 0, 0.7); padding: 20px; text-align: center; marg
 
         </section>
 
-               <section id="resume">
-            <h2>My Resume</h2>
-            <p style="text-align:center; margin-bottom: 25px;">
-                Click the button below to view or download my resume.
-            </p>
-            <div style="text-align:center;">
-                <a href="photos/Anmol_Srivastava_Resume_BW.docx" target="_blank" class="resume-btn">
-                    View My Resume
-                </a>
-            </div>
-        </section>
+        <section id="resume">
+            <h2>My Resume</h2>
+            <p style="text-align:center; margin-bottom: 25px;">
+                Choose an option to view or download my resume:
+            </p>
+            <div class="resume-options">
+                <button class="resume-btn" onclick="showResumeImage()">View Resume</button>
+                <a href="photos/Anmol_Srivastava_Resume_BW.docx" target="_blank" class="resume-btn download-btn">Download Resume</a>
+            </div>
+
+            <div id="resume-image-viewer" class="resume-image-viewer">
+                <img id="resume-img" src="photos/anmolres.png" alt="Anmol Srivastava's Resume" class="active">
+                <button class="close-resume-viewer" onclick="hideResumeImage()">×</button>
+            </div>
+        </section>
+
+        <section id="contact">
 
         <section id="contact">
             <h2>Contact Me</h2>
